# vm-attest

./: Cargo.toml
.github/workflows/: lint.yaml
demo/: Cargo.toml  README.md  demo-vm.sh
demo/src/: socket.rs
src/: lib.rs  rot.rs  socket.rs  vsock.rs
test-data/: corim.kdl  vm-instance-cfg.json
vm-attest/: Cargo.toml
vm-attest/test-data/: config.kdl
