[package]
name = "vm-attest"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
build = "build/main.rs"

[features]
test-data = []

[dependencies]
attest-data.git = "https://github.com/oxidecomputer/dice-util"
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["mock"] }
getrandom = { version = "0.3.4", features = ["std"] }
hex = "0.4.3"
hubpack = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["hex"] }
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["std", "serde"] }
x509-cert = "0.2.5"

[build-dependencies]
anyhow.version = "1.0.100"

[dev-dependencies]
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
vm-attest = { path = ".", features = ["test-data"] }
