[workspace]
members = [
    "vm-attest"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
attest-data.git = "https://github.com/oxidecomputer/dice-util"
dice-verifier.git = "https://github.com/oxidecomputer/dice-util"
getrandom = "0.3.4"
hex = "0.4.3"
hubpack = "0.1.2"
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.1"
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = "1.18.1"
x509-cert = "0.2.5"
