[package]
name = "vm-attest"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
build = "build/main.rs"

[features]
test-data = []

[dependencies]
attest-data.workspace = true
dice-verifier = { workspace = true, features = ["mock"] }
getrandom = { workspace = true, features = ["std"] }
hex.workspace = true
hubpack.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sha2.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["std", "serde"] }
x509-cert.workspace = true

[build-dependencies]
anyhow.workspace = true

[dev-dependencies]
rats-corim.workspace = true
vm-attest = { path = ".", features = ["test-data"] }
